--- a/app/src/main/res/layout/full_character.xml
+++ b/app/src/main/res/layout/full_character.xml
@@ -19,8 +19,7 @@
             android:fillViewport="true"
             android:orientation="vertical"
             android:paddingHorizontal="20dp"
-            android:paddingVertical="20dp"
-            >
+            android:paddingVertical="20dp">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/portrait_block"
@@ -125,108 +124,198 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/personal_block">
 
-                    <LinearLayout
-                        android:id="@+id/characteristic"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/text_block_margin"
-                        android:orientation="vertical"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/personal_block">
-
-                        <TextView
-                            android:id="@+id/strength"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:id="@+id/characteristic"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/strength" />
+                            android:layout_marginTop="@dimen/text_block_margin"
+                            android:orientation="vertical"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/personal_block">
 
-                        <TextView
-                            android:id="@+id/dexterity"
-                            android:layout_width="wrap_content"
+                            <TextView
+                                android:id="@+id/strength"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/strength" />
+
+                            <TextView
+                                android:id="@+id/dexterity"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/dexterity" />
+
+                            <TextView
+                                android:id="@+id/constitution"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/dexterity" />
+
+                            <TextView
+                                android:id="@+id/intelligence"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/dexterity" />
+
+                            <TextView
+                                android:id="@+id/wisdom"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/dexterity" />
+
+                            <TextView
+                                android:id="@+id/charisma"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/dexterity" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/stats"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/dexterity" />
+                            android:layout_marginTop="@dimen/text_block_margin"
+                            android:orientation="vertical"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/personal_block">
 
-                        <TextView
-                            android:id="@+id/constitution"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/dexterity" />
+                            <TextView
+                                android:id="@+id/fortitude"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/stats" />
 
-                        <TextView
-                            android:id="@+id/intelligence"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/dexterity" />
+                            <TextView
+                                android:id="@+id/reflex"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/stats" />
 
-                        <TextView
-                            android:id="@+id/wisdom"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/dexterity" />
+                            <TextView
+                                android:id="@+id/will"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/stats" />
 
-                        <TextView
-                            android:id="@+id/charisma"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/dexterity" />
-                    </LinearLayout>
+                            <TextView
+                                android:id="@+id/concentration"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/stats" />
 
-                    <LinearLayout
-                        android:id="@+id/stats"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/text_block_margin"
-                        android:orientation="vertical"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/personal_block">
-
-                        <TextView
-                            android:id="@+id/fortitude"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/stats" />
-
-                        <TextView
-                            android:id="@+id/reflex"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/stats" />
-
-                        <TextView
-                            android:id="@+id/will"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/stats" />
-
-                        <TextView
-                            android:id="@+id/concentration"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/stats" />
-
-                        <TextView
-                            android:id="@+id/perception"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/stats" />
+                            <TextView
+                                android:id="@+id/perception"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/stats" />
 
 
-                    </LinearLayout>
+                        </LinearLayout>
 
-                        <TextView
+                        <LinearLayout
                             android:id="@+id/skill_set"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/skills" />
+                            android:layout_marginTop="@dimen/text_block_margin"
+                            android:orientation="vertical"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/personal_block">
+
+                            <TextView
+                                android:id="@+id/acrobatics"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/climbing"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/diplomacy"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/horseRiding"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/knowledgeDungeons"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/knowledgeMagic"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/knowledgeNature"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/knowledgeReligion"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/knowledgeWorld"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/mechanics"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/medicine"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/stealth"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/survival"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+                            <TextView
+                                android:id="@+id/swimming"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/skills" />
+
+
+                        </LinearLayout>
 
                         <TextView
                             android:id="@+id/inventory"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/inventory" />
-
 
                     </LinearLayout>
 
